--- a/src/app/layouts/app-layout/app-layout.scss
+++ b/src/app/layouts/app-layout/app-layout.scss
@@ -91,7 +91,7 @@
 
 main.content {
   min-height: 0;
-  padding: 0 1rem;
+  padding: 1rem;
   height: calc(100dvh - 3rem);
 }
 
