--- a/src/app/pages/calendar/calendar.scss
+++ b/src/app/pages/calendar/calendar.scss
@@ -13,7 +13,6 @@
 }
 
 .content-container {
-  padding-top: 2rem;
   height: 100%;
   max-width: 100%;
   max-height: 100%;
@@ -36,7 +35,6 @@ nav {
   display: flex;
   justify-content: center;
   z-index: 6;
-  margin-bottom: 1rem;
   position: absolute;
   top: -2rem;
   right: 0;
